# cardea

./: .env.template(new)  .gitignore  .pre-commit-config.yaml  ENVIRONMENT_CONFIGURATION_SUMMARY.md  MICROSOFT_SIGNIN_TROUBLESHOOTING.md  Makefile  QUICK_START_OAUTH.md  context.md  pyproject.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  security_issue.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  deploy-dashboard.yml  deploy-oracle.yml
dashboard/: .env.example  .env.template  index.html  package-lock.json  package.json  staticwebapp.config.json  tsconfig.app.json
dashboard/src/: App.tsx  authConfig.ts  index.css  main.tsx  types.ts
infrastructure/terraform/: auth.tf  main.tf  oracle.tf
oracle/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_azure_config.py
oracle/migrations/: env.py
oracle/migrations/versions/: 20260106_001_initial_schema.py  20260109_003_add_devices.py
oracle/scripts/: health_check.py  startup.py
oracle/src/: analytics.py  auth.py  azure_auth.py  config.py  database.py  external_id_auth.py  main.py  models.py  oracle_service.py  search_service.py
oracle/src/api/: actions.py  alerts.py  analytics.py  devices.py
oracle/tests/: __init__.py  test_oracle.py
scripts/: simulate_attack.py  validate_runtime.py
sentry/: .dockerignore  .gitignore  docker-compose.yml
sentry/bridge/: Dockerfile  requirements.txt
sentry/scripts/: build.sh  (+2 more)
(+60 files in other folders)
